# palinor

./: .gitignore  README.md  pyproject.toml  vector_dataset.jsonl
dataset_templates/: alphapenger.yaml  vietest.py  vietest.yaml  vietest_base.yaml
notebooks/example.ipynb/: example.ipynb  terrence.ipynb  valence_test.ipynb
palinor/: ControlLayer.py  ControlVector.py  ControllableModel.py  __init__.py  create_dataset.py  manager.py  message_template.py  vector_readers.py
palinor/cli/: cli.py
pngr/: BlockControlParams.py  ControlLayer.py  ControlVector.py  ControllableModel.py  Message.py  __init__.py  cli.py  control.py  create_dataset.py  manager.py  vector_readers.py
